# VKI

./: .gitignore  git_push
Project/Stagline/: .gitignore  CMakeLists.txt  Doxyfile.in
Project/Stagline-main/src/: CMakeLists.txt  compute_flowfield.F90  config.h.in  mesh.F90  stop_cond.F90
Project/Stagline-main/src/Polyat_gas_WCU/: CMakeLists.txt  mod_polyat_gas_wcu_CFD_alpha.F90
Project/Stagline-main/src/ablation_modules/: mod_ablation_num_param.F90  mod_ablation_phys_param.F90  mod_ablation_pointers.F90  mod_ablation_procedure_carbon_library.F90  mod_ablation_procedures.F90  mod_ablation_procedures_newton.F90
Project/Stagline-main/src/algebra/: CMakeLists.txt
Project/Stagline-main/src/apply_bc_1D/: apply_bc_1DExpl.F90  apply_bc_1DImpl.F90
Project/Stagline-main/src/apply_bc_1D_SL/: CMakeLists.txt  apply_bc_1D_SL_Expl.F90  apply_bc_1D_SL_Impl.F90
Project/Stagline-main/src/argon_CR/: CMakeLists.txt  mod_argon_CR_CFD_transport.F90  mod_argon_CR_function_pointer.F90
Project/Stagline-main/src/bc_1D/: CMakeLists.txt  bc_1DExpl_1st.F90  bc_1DExpl_2nd.F90  bc_1DImpl_1st.F90
Project/Stagline-main/src/bc_1D_SL/: CMakeLists.txt  bc_1D_SL_Expl_2nd.F90
Project/Stagline-main/src/bc_neq_1D/: CMakeLists.txt  bc_neq_1DExpl_2nd.F90
Project/Stagline-main/src/bc_neq_1D_SL/: CMakeLists.txt  bc_ablation_general_neq_1D_SL_Expl_1st.F90  bc_ablation_general_neq_1D_SL_Expl_2nd.F90  bc_neq_1D_SL_Expl_1st.F90  bc_neq_1D_SL_Expl_2nd.F90  bc_neq_1D_SL_Impl_1st.F90  bc_neq_1D_SL_Impl_2nd.F90
Project/Stagline-main/src/diff_flux_1D/: ns_flux_1D.F90  null_ns_flux_1D.F90
Project/Stagline-main/src/diff_flux_1D_SL/: diff_flux_num_Jac_1D_SL.F90  ns_flux_1D_SL_cyl.F90  ns_flux_1D_SL_cyl_Jac.F90  ns_flux_1D_SL_sph_Jac.F90  null_ns_flux_1D_SL.F90  stress_tensor_1D_SL_cyl.F90  stress_tensor_1D_SL_sph.F90
Project/Stagline-main/src/diff_flux_neq_1D/: CMakeLists.txt  ns_flux_neq1T_1D_Jac.F90  ns_flux_neqNT_1D_Jac.F90  ns_flux_neqNT_Te_1D.F90
Project/Stagline-main/src/diff_flux_neq_1D_SL/: CMakeLists.txt  ns_flux_neq1T_1D_SL_cyl_Jac.F90  ns_flux_neq1T_1D_SL_sph.F90  ns_flux_neq1T_1D_SL_sph_Jac.F90  ns_flux_neqNT_1D_SL_cyl.F90  ns_flux_neqNT_1D_SL_sph.F90  ns_flux_neqNT_1D_SL_sph_Jac.F90  ns_flux_neqNT_Te_1D_SL_cyl.F90  ns_flux_neqNT_Te_1D_SL_sph.F90
Project/Stagline-main/src/eigensystem_1D_SL/: eigensystem_1D_SL.F90
Project/Stagline-main/src/eigensystem_neq_1D_SL/: CMakeLists.txt  eigensystem_neq1T_1D_SL.F90  eigensystem_neqNT_1D_SL.F90  eigensystem_neqNT_Te_1D_SL.F90
Project/Stagline-main/src/initialize/: read_solution.F90
Project/Stagline-main/src/inv_flux_1D/: Steger_Warming_1D.F90  inviscid_flux_Jac_1D.F90  roe_1D.F90  roe_avgState_1D.F90  van_leer_1D.F90
Project/Stagline-main/src/inv_flux_1D_SL/: CMakeLists.txt  Pos_Neg_split_Jac_1D_SL.F90  ausmPC_1D_SL.F90  conv_flux_num_Jac_1D_SL.F90  inviscid_flux_Jac_1D_SL.F90
Project/Stagline-main/src/inv_flux_neq_1D/: Pos_Neg_split_Jac_neq1T_1D.F90  Pos_Neg_split_Jac_neqNT_Te_1D.F90  Steger_Warming_neq1T_1D.F90  Steger_Warming_neqNT_Te_1D.F90  Yoon_Jameson_Jac_neq_1D.F90  hlle_neq_1D.F90  inviscid_flux_Jac_neqNT_Te_1D.F90  roe_neq_1D.F90  van_leer_neq_1D.F90
Project/Stagline-main/src/inv_flux_neq_1D_SL/: Pos_Neg_split_Jac_1D_SL.F90  Pos_Neg_split_Jac_neqNT_1D_SL.F90  Pos_Neg_split_Jac_neqNT_Te_1D_SL.F90  Steger_Warming_1D_SL.F90  Steger_Warming_neq1T_1D_SL.F90  Steger_Warming_neqNT_1D_SL.F90  Yoon_Jameson_Jac_neq_1D_SL.F90  ausm_neq1T_1D_SL.F90  inviscid_flux_Jac_neqNT_1D_SL.F90  roe_avgState_neq1T_1D_SL.F90  roe_avgState_neqNT_Te_1D_SL.F90  roe_neq_1D_SL.F90  van_leer_neq_1D_SL.F90
Project/Stagline-main/src/library_interface/: mod_Mutationpp_library.F90  mod_Nitrogen_DSMC_library.F90  mod_Nitrogen_FHO_library.F90  mod_Nitrogen_NASA_library.F90  mod_Polyat_gas_WCU_library.F90
Project/Stagline-main/src/mesh_adaptor/: CMakeLists.txt
Project/Stagline-main/src/modules/: mod_constants.F90  mod_domain_boundary.F90  mod_general_ablation.F90  mod_phys_model.F90
Project/Stagline-main/src/neq/: CMakeLists.txt  mod_neq_2D.F90
Project/Stagline-main/src/nitrogen_Bari/: CMakeLists.txt  mod_nitrogen_Bari_CFD_alpha.F90  mod_nitrogen_Bari_CFD_eq.F90  mod_nitrogen_Bari_CFD_source.F90  mod_nitrogen_Bari_CFD_transport.F90
Project/Stagline-main/src/nitrogen_DSMC/: CMakeLists.txt  mod_function_pointer_DSMC.F90  mod_nitrogen_DSMC_CFD_alpha.F90  mod_nitrogen_DSMC_CFD_eq.F90  mod_nitrogen_DSMC_CFD_prop.F90  mod_nitrogen_DSMC_CFD_source.F90  mod_nitrogen_DSMC_zeta.F90
Project/Stagline-main/src/nitrogen_FHO/: CMakeLists.txt  mod_nitrogen_FHO_CFD_alpha.F90  mod_nitrogen_FHO_CFD_eq.F90  mod_nitrogen_FHO_CFD_prop.F90
Project/Stagline-main/src/nitrogen_NASA/: CMakeLists.txt  mod_nitrogen_NASA_CFD_prop.F90  mod_nitrogen_NASA_CFD_source_RVC.F90  mod_nitrogen_NASA_CFD_source_VC.F90  mod_nitrogen_NASA_CFD_source_VC_rr.F90  mod_nitrogen_NASA_zeta.F90
Project/Stagline-main/src/nitrogen_Park/: mod_nitrogen_Park_CFD_prop.F90  mod_nitrogen_Park_CFD_source_VT_RT.F90  mod_nitrogen_Park_CFD_transport.F90  mod_nitrogen_Park_zeta.F90
Project/Stagline-main/src/nitrogen_TTLTH/: mod_function_pointer_TTLTH.F90  mod_nitrogen_TTLTH_CFD_alpha.F90  mod_nitrogen_TTLTH_CFD_source.F90  mod_nitrogen_TTLTH_CFD_source_num  mod_nitrogen_TTLTH_zeta.F90
Project/Stagline-main/src/pg/: mod_pg_1D.F90  mod_pg_2D.F90
Project/Stagline-main/src/physical_data/: CMakeLists.txt  physical_data.F90  prim_to_cons_1D.F90  prim_to_cons_1D_SL.F90  prim_to_cons_neq_1D.F90  prim_to_cons_neq_1D_SL.F90  prim_to_cons_phys_neq_1D_SL.F90
Project/Stagline-main/src/precon_1D/: CMakeLists.txt  (+1 more)
Project/Stagline/Catalicity_files/: air_11_100mbar.xml  air_11_200mbar.xml  air_11_50mbar.xml  air_7_200mbar.xml  gsi_surface_cat_200mbar.xml  gsi_surface_cat_50mbar.xml
Project/Stagline/Macro_folders/: Example_input_air_5
Project/Stagline/Template_files/: Example_input_air_11  Example_input_air_7  Example_input_sub_air_11  Example_input_sub_air_5  Example_input_sub_air_7  Example_input_sup_air_7
Project/Stagline/input/: cfl_N-N2_frozen_gupta_NS_1st
Project/Stagline/src/: main.F90  update_cfl.F90
(+1747 files in other folders)
